--- a/tpl/page_footer.htm
+++ b/tpl/page_footer.htm
@@ -1,10 +1,26 @@
-<span class="copy">
-	&copy; Vidguk.pro,
+﻿<span class="copy">
+	&copy; 2014 vidguk.pro
 </span>
 <span class="socials">
-	<span class="item">soc1</span>
-	<span class="item">soc2</span>
-	<span class="item">soc3</span>
+	<span class="item">
+	<iframe src="//www.facebook.com/plugins/like.php?href=https%3A%2F%2Fwww.vidguk.pro&amp;width=115&amp;layout=button_count&amp;action=like&amp;show_faces=false&amp;share=false&amp;height=21&amp;appId=368333273247595" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:115px; height:21px;" allowTransparency="true"></iframe>
+</span>
+<span class="item"><!-- Поместите этот тег туда, где должна отображаться кнопка +1. -->
+<div class="g-plusone" data-size="medium"></div>
+
+<!-- Поместите этот тег за последним тегом виджета кнопка +1. -->
+<script type="text/javascript">
+  window.___gcfg = {lang: 'ru'};
+
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/platform.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script></span>	
+<span class="item"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://www.vidguk.pro">Tweet</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></span>
+	
 </span>
 
 <span class="nav">
